<resources>
    <string name="app_name">PetsWorld</string>
    <string name="txtNoTieneUsuario">¿No tienes cuenta?</string>
    <string name="txtRCrearUsuario">" Crea una aqui."</string>
    <string name="txtOlvidoClave">¿Olvidaste la clave?</string>
    <string name="txtRecuperarClave">" Recuperala aqui."</string>
    <string name="page_title">Clientes</string>
    <string name="calendar">Calendar</string>
    <string name="txtAppointments">Citas</string>
    <string name="txtVeterinary">Veterinarios</string>
    <string name="txtCustomers">Clientes</string>
    <string name="txtPets">Mascotas</string>
    <string name="txtNews">Novedades</string>
    <string name="txtChat">Chat</string>
    <string name="txtReminder">Recordatorios</string>
    <string name="txtInfo">Info</string>
    <string name="txtProfile">Mi Perfil</string>
    <string name="page3_title">Veterinarios</string>
    <string name="content_description_media">Imagen de Perfil</string>
    <string name="veterinario_name">Andres sanchez</string>
    <string name="cc_veterinario">C.C: 90.145.587</string>
    <string name="tel_veterinario">Cel: 312584698</string>
    <string name="mail_veterinario">Correo: andres@gmail.com</string>
    <string name="consultorio">Consultorio: 510</string>
    <string name="especialidad">Especialidad: Anestesiología</string>
    <string name="page5_title">Notificaciones</string>
    <string name="name_alert">Ruben</string>
    <string name="alert_asunto">Asunto: Control Trimestral</string>
    <string name="alert_date">Hora: 8:00 a.m.</string>
    <string name="alert_name_pet">Recomendación: Traer en ayunas</string>
    <string name="page2_title">Clientes</string>
    <string name="client_name">Andrea Silva</string>
    <string name="pet_name">Tom</string>
    <string name="raza">Raza: Persa</string>
    <string name="sexo">Sexo: Femenino</string>
    <string name="edad">Edad: 3 años</string>
    <string name="dueño_mascota">Propietario: Carlos Pérez</string>
    <string name="page4_title">Eventos del Día</string>
    <string name="name_event">Jornada de Vacunación</string>
    <string name="hora_evento">Hora: 10:00 a.m.</string>
    <string name="alarm_event">¡Ven a vacunar a tu mascota!</string>
    <string name="search">Buscar</string>
    <string name="content_description_search">Búsqueda</string>
    <string name="copyright">©PetsWorld</string>
    <string name="lema">Your Pets Ideal Choices</string>
    <string name="Tommy">Tommy</string>
    <string name="edadAnimal">Edad: 3 años</string>
    <string name="razaPerro">Raza: Golden Retriever</string>
    <string name="propietario">Propietario: Carlos Ramirez</string>
    <string name="fechaPerro">Fecha: 30/11/2020</string>
    <string name="horaPerro">Hora: 8:00 a.m.</string>
    <string name="citas">Citas</string>
    <string name="siguenos">Siguenos</string>
    <string name="historial">Historial</string>
    <string name="especie">Especie: Felino</string>
    <string name="Garfield">Garfield</string>
    <string name="edadFelino">Edad: 2 años</string>
    <string name="sexoFelino">Sexo: Macho</string>
    <string name="peso">Peso: 4 kg</string>
    <string name="razaGato">Raza: Persa</string>
    <string name="enfermedades">Enfermedades Previas: Ninguna</string>
    <string name="temperatura">Temperatura: 37 °C</string>
    <string name="pulso">Pulso: 150 p/m</string>
    <string name="esterilizado">Esterilizado: No</string>
    <string name="dieta">Dieta: Pescados</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_click">Title click</string>
    <string name="citasString">Citas Hola</string>
    <string name="veterinariosString">Veterinarios</string>
    <string name="clientesString">Clientes</string>
    <string name="mascotasString">Mascotas</string>
    <string name="novedadesString">Novedades</string>
    <string name="chatString">Chat</string>
    <string name="recordatoriosString">Recordatorios</string>
    <string name="infoString">Info</string>
    <string name="miperfilString">Mi Perfil</string>
    <string name="txtNomenclaturas">Nomenclaturas</string>
    <string name="txtPacientes">Pacientes</string>
    <string name="txtHistorial">Historial</string>
    <string name="txtNotificaciones">Notificaciones</string>
    <string name="guia">Guía para vacunar a tu amigo canino</string>
    <string name="vermas">Ver más...</string>
    <string name="Novedades">Novedades</string>
    <string name="clientid">C.C: 80.548.125</string>
    <string name="client_mail">Correo: andreas@gmail.com</string>
    <string name="client_tel">Cel: 3185485214</string>
    <string name="client_pet">Propietaria de: Ruben</string>
    <string name="client_addres">Dir: Calle 25 N #48 RE</string>
    <string name="pagechat">Chat</string>
    <string name="chat_message">Escribe un mensaje...</string>
</resources>