<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Customer.AlertasActivity"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Historial Clínico"
        android:textStyle="bold|italic"
        android:layout_gravity="center"
        android:textColor="@color/ColorPrimary"
        android:textSize="80px"
        android:layout_marginTop="100px"/>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <!-- Scrollable content -->

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/card"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:background="@color/Card">

                    <!-- Media -->

                    <LinearLayout
                        android:layout_width="800px"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="16dp">
                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="200dp"
                            app:srcCompat="@drawable/gato"
                            android:layout_marginBottom="20px"
                            android:scaleType="centerCrop"
                            android:layout_gravity="center_vertical"
                            android:contentDescription="@string/content_description_media"
                            tools:ignore="VectorDrawableCompat"/>
                        <!-- Title, secondary and supporting text -->
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/Garfield"
                            android:textSize="80px"
                            android:layout_gravity="center"
                            android:textAppearance="?attr/textAppearanceHeadline6"
                            android:textColor="@color/TitleBar"
                            android:layout_marginBottom="20px"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/especie"
                            android:textSize="45px"
                            android:textColor="@color/TitleBar"
                            />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:text="@string/edadFelino"
                            android:textSize="45px"
                            android:textColor="@color/TitleBar"
                            />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:text="@string/sexoFelino"
                            android:textSize="45px"
                            android:textColor="@color/TitleBar"
                            />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:text="@string/peso"
                            android:textSize="45px"
                            android:textColor="@color/TitleBar"
                            />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:text="@string/razaGato"
                            android:textSize="45px"
                            android:textColor="@color/TitleBar"
                            />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:text="@string/enfermedades"
                            android:textSize="45px"
                            android:textColor="@color/TitleBar"
                            />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:text="@string/temperatura"
                            android:textSize="45px"
                            android:textColor="@color/TitleBar"
                            />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:text="@string/pulso"
                            android:textSize="45px"
                            android:textColor="@color/TitleBar"
                            />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:text="@string/esterilizado"
                            android:textSize="45px"
                            android:textColor="@color/TitleBar"
                            />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:text="@string/dieta"
                            android:textSize="45px"
                            android:textColor="@color/TitleBar"
                            />
                    </LinearLayout>
<!--                    <ImageView-->
<!--                        android:layout_width="match_parent"-->
<!--                        android:layout_height="200dp"-->
<!--                        app:srcCompat="@drawable/gato"-->
<!--                        android:scaleType="centerCrop"-->
<!--                        android:layout_gravity="center"-->
<!--                        android:contentDescription="@string/content_description_media"-->
<!--                        tools:ignore="VectorDrawableCompat"/>-->

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

        </androidx.core.widget.NestedScrollView>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</LinearLayout>