<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cardMascotas"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/Card">

        <!-- Media -->
        <ImageView
            android:id="@+id/idImagenMascota"
            android:layout_width="150dp"
            android:layout_height="match_parent"
            app:srcCompat="@drawable/persa"
            android:scaleType="centerCrop"
            android:contentDescription="@string/content_description_media"
        />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <!-- Title, secondary and supporting text -->
            <TextView
                android:id="@+id/idNombreMascota"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Tina"
                android:textSize="70px"
                android:layout_gravity="center"
                android:textAppearance="?attr/textAppearanceHeadline6"
                android:textColor="@color/TitleBar"
            />

            <TextView
                android:id="@+id/idRazaMascota"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/raza"
                android:textAppearance="?attr/textAppearanceBody2"
                android:textColor="@color/TitleBar"

                />

            <TextView
                android:id="@+id/idSexoMascota"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/sexo"
                android:textAppearance="?attr/textAppearanceBody2"
                android:textColor="@color/TitleBar"
            />
            <TextView
                android:id="@+id/idEdadMascota"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/edad"
                android:textAppearance="?attr/textAppearanceBody2"
                android:textColor="@color/TitleBar"
            />
            <TextView
                android:id="@+id/idPropietarioMascota"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/dueño_mascota"
                android:textAppearance="?attr/textAppearanceBody2"
                android:textColor="@color/TitleBar"
            />

        </LinearLayout>

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>