<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Administrator.CitasActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Citas"
        android:textStyle="bold|italic"
        android:layout_gravity="center"
        android:textColor="@color/ColorPrimary"
        android:textSize="80px"
        android:layout_marginTop="100px"/>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <!-- Scrollable content -->

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cardCitas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_gravity="center">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:background="@color/Card">

                    <!-- Media -->
                    <ImageView
                        android:layout_width="166dp"
                        android:layout_height="match_parent"
                        app:srcCompat="@drawable/perro"
                        android:scaleType="centerCrop"
                        android:contentDescription="@string/content_description_media"
                        />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="16dp">

                        <!-- Title, secondary and supporting text -->
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/Tommy"
                            android:textAppearance="?attr/textAppearanceHeadline6"
                            android:textColor="@color/TitleBar"
                            />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:text="@string/razaPerro"
                            android:textAppearance="?attr/textAppearanceBody2"
                            android:textColor="@color/TitleBar"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:text="@string/edadAnimal"
                            android:textAppearance="?attr/textAppearanceBody2"
                            android:textColor="@color/TitleBar"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:text="@string/propietario"
                            android:textAppearance="?attr/textAppearanceBody2"
                            android:textColor="@color/TitleBar"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:text="@string/fechaPerro"
                            android:textAppearance="?attr/textAppearanceBody2"
                            android:textColor="@color/TitleBar"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:text="@string/horaPerro"
                            android:textAppearance="?attr/textAppearanceBody2"
                            android:textColor="@color/TitleBar"/>
                    </LinearLayout>

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

        </androidx.core.widget.NestedScrollView>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</LinearLayout>